updated Arethusa code includes hack fix for https://github.com/alpheios-project/arethusa/issues/764 to allow navigation via key stroke. verified that this code can rebuilt from the arethusa_nemo_plugin branch in the main arethusa code base

--- a/nemo_arethusa_plugin/data/templates/text.html
+++ b/nemo_arethusa_plugin/data/templates/text.html
@@ -22,7 +22,7 @@
             {{text}}
         </div>
         <div role="tabpanel" class="tab-pane" id="treebank">
-            <div class="arethusa-namespace">
+            <div class="__artsa">
             {{ treebank }}
             </div>
         </div>
